Correção dos problemas com as consultas e lógica para trazer apenas dívidas e restrições ativas.