@@ -1,15 +1,16 @@
 package com.gateway.serasa.service;
 
+import com.gateway.serasa.dto.PessoaMapper;
+import com.gateway.serasa.dto.PessoaResponseDTO;
+import com.gateway.serasa.entity.Divida;
 import com.gateway.serasa.entity.Pessoa;
+import com.gateway.serasa.entity.Restricao;
 import com.gateway.serasa.mock.MockService;
 import com.gateway.serasa.repository.PessoaRepository;
 import com.gateway.serasa.util.ValidadorDocumento;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ConsultaSerasaService {
@@ -23,28 +24,39 @@ public class ConsultaSerasaService {
         this.mockService = mockService;
     }
 
-
-    public Pessoa consultarPorDocumento(String documento) {
+    public PessoaResponseDTO consultarPorDocumento(String documento) {
         if (!ValidadorDocumento.validarDocumento(documento)) {
             throw new IllegalArgumentException("Documento inválido: " + documento);
         }
 
-        Optional<Pessoa> pessoaExistente = pessoaRepository.findByDocumento(documento);
+        Pessoa pessoa = pessoaRepository.findByDocumento(documento)
+                .orElseGet(() -> mockService.buscarPorDocumento(documento)
+                        .orElseThrow(() -> new RuntimeException("Documento não encontrado no Serasa: " + documento)));
 
-        if (pessoaExistente.isPresent()) {
-            return pessoaExistente.get();
-        }
+        filtrarDividasEmAberto(pessoa);
+        filtrarRestricoesEmAberto(pessoa);
 
-        Pessoa pessoa = mockService.buscarPorDocumento(documento)
-                .orElseThrow(() -> new RuntimeException("Documento não encontrado no serasa: " + documento));
-
-        return pessoaRepository.save(pessoa);
+        return PessoaMapper.toDTO(pessoa);
     }
 
-    public Collection<Pessoa> consultarPorLote(List<String> documentos) {
+    private void filtrarRestricoesEmAberto(Pessoa pessoa) {
+        List<Restricao> restricoesAtivas = pessoa.getRestricoes().stream()
+                .filter(r -> r.isEmAberto() && r.getDataExclusao() == null)
+                .toList();
+        pessoa.setRestricoes(restricoesAtivas);
+    }
+
+    private void filtrarDividasEmAberto(Pessoa pessoa) {
+        List<Divida> dividasAbertas = pessoa.getDividas().stream()
+                .filter(Divida::isEmAberto)
+                .toList();
+        pessoa.setDividas(dividasAbertas);
+    }
+
+    public List<PessoaResponseDTO> consultarPorLote(List<String> documentos) {
         List<String> documentosInvalidos = documentos.stream()
                 .filter(doc -> !ValidadorDocumento.validarDocumento(doc))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!documentosInvalidos.isEmpty()) {
             throw new IllegalArgumentException("Documentos inválidos no lote: " + documentosInvalidos);
